# Quote-page

./: .env.example  .gitignore  README.md  project_commands.txt  pyproject.toml  requirements.txt
quote_project/: settings.py  urls.py
quotes/: admin.py  forms.py  models.py  urls.py  views.py
quotes/management/commands/: seed_quotes.py
quotes/migrations/: 0002_alter_quote_weight.py
quotes/templates/quotes/: add_quote.html  base.html  random_quote.html  top_quotes.html
