[tool.poetry]
name = "quote-project"
version = "0.1.0"
description = "Django project for random quotes"
authors = ["uservm <example@mail.com>"]
readme = "README.md"
packages = [
    { include = "quote_project", from = "." },
]

[tool.poetry-virtualenvs]
path = ".venv"  # Виртуальная среда будет создана в папке проекта
in-project = true  # Создавать виртуальную среду внутри проекта

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"